fix: add required attributes in index.html

--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <html>
     <head>
+        <title>CV</title>
     </head>
-    <body>
-        <p>CV</p>
+    <body lang="ru">
+        <p>CV body</p>
     </body>
 </html>
