--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
-<html>
+<html lang="ru">
     <head>
         <title>CV</title>
     </head>
-    <body lang="ru">
+    <body>
         <p>CV body</p>
     </body>
 </html>
