fix: sections content layout

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="center-column">
       <img src="/images/avatar.jpg" alt="Avatar" width="300" height="300">
       <h1>Dmitrii<br>Brazhnikov</h1>
-      <h2>ABAP Developer</h2>
+      <h2>Frontend Developer</h2>
     </div>
     <div class="right-column">
       <nav>
@@ -22,7 +22,7 @@
           <li><a href="#about-me">About me</a></li>
           <li><a href="#skills">Skills</a></li>
           <li><a href="#code-example">Code example</a></li>
-          <li><a href="#experience">Experience</a></li>
+          <li><a href="#projects">Projects</a></li>
           <li><a href="#education">Education</a></li>
           <li><a href="#languages">Languages</a></li>
         </ul>
@@ -43,7 +43,7 @@
     <section class="about-me" id="about-me">
       <h2>About me</h2>
       <ul>
-        <li><b>Goles:</b> study frontend development (JS, React);</li>
+        <li><b>Goles:</b> in-depth study of frontend development (JS, React);</li>
         <li><b>Current specialization:</b> ABAP-developer for SAP products;</li>
         <li><b>Strengths:</b> attentiveness, the ability to complete tasks, the ability to search for information.</li>
       </ul>
@@ -51,14 +51,25 @@
 
     <section class="skills" id="skills">
       <h2>Skills</h2>
-      - ABAP language (ALV-Grid, ALV-Tree, transactions, reports, UI, code optimization, etc.):
-      - experience of using User-Exit, BAdi, Enhancements, BAPI, RFC, creating oData и REST web-services;
-      - reports in MS Office format (ZWWW, XLSX Workbench);
-      - pdf-forms (Adobe LiveCycle Designer);
-      - integration with external systems by SAP PI/XI, SAP .NET Connector, using Single Sign-On (SSO);
-      - experience of developing for modules RE-FX, HR, RCM;
-      - basic knowledge of SQL and PL/SQL (Oracle);
-      - other programming languages: C++, Java, VBA.
+      <ul>
+        <li>JavaScript</li>
+        <li>ABAP language (ALV-Grid, ALV-Tree, transactions, reports, UI, code optimization, etc.):
+          <ul>
+            <li>experience of using User-Exit, BAdi, Enhancements, BAPI, RFC, creating oData и REST web-services;</li>
+            <li>reports in MS Office format (ZWWW, XLSX Workbench);</li>
+            <li>pdf-forms (Adobe LiveCycle Designer);</li>
+            <li>integration with external systems by SAP PI/XI, SAP .NET Connector, using Single Sign-On (SSO);</li>
+            <li>experience of developing for modules RE-FX, HR, RCM;</li>
+          </ul>
+        </li>
+        <li>basic knowledge of other languages:
+          <ul>
+            <li>SQL and PL/SQL (Oracle);</li>
+            <li>Java;</li>
+            <li>VBA.</li>
+          </ul>
+        </li>
+      </ul>
     </section>
 
     <section class="code-example" id="code-example">
@@ -85,19 +96,22 @@
       </pre>
     </section>
 
-    <section class="experience" id="experience">
-      <h2>Work experience</h2>
-      [CV#1. Markdown & Git](https://brazhik.github.io/rsschool-cv/cv) (June 2022)
+    <section class="projects" id="projects">
+      <h2>Projects</h2>
+      <ul>
+        <li><a href="https://brazhik.github.io/rsschool-cv/cv">CV#1. Markdown & Git</a> (June 2022)</li>
+        <li><a href="https://brazhik.github.io/rsschool-cv">CV#3. CV. Cross-Check</a> (June 2022)</li>
+      </ul>
     </section>
 
     <section class="education" id="education">
       <h2>Education</h2>
-      Lomonosov Moscow State University, Physics (2008)
+      <p>Lomonosov Moscow State University, Physics (2008)</p>
     </section>
 
     <section class="languages" id="languages">
       <h2>Languages</h2>
-      English (Intermediate, B1)
+      <p>English (Intermediate, B1)</p>
     </section>
   </main>
 
