fix: layout changes for centering content in sections

--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
       <h2>Contact</h2>
       <ul>
         <li><b>discord:</b> Dmitrii (@brazhik)</li>
-        <li><b>E-mail:</b> mail@example.com</li>
-        <li><b>Phone:</b> +7-XXX-XXX-XX-XX</li>
+        <li><b>e-mail:</b> mail@example.com</li>
+        <li><b>phone:</b> +7-XXX-XXX-XX-XX</li>
       </ul>
     </section>
 
@@ -59,7 +59,7 @@
             <li>reports in MS Office format (ZWWW, XLSX Workbench);</li>
             <li>pdf-forms (Adobe LiveCycle Designer);</li>
             <li>integration with external systems by SAP PI/XI, SAP .NET Connector, using Single Sign-On (SSO);</li>
-            <li>experience of developing for modules RE-FX, HR, RCM;</li>
+            <li>experience in development for modules RE-FX, HR, RCM;</li>
           </ul>
         </li>
         <li>basic knowledge of other languages:
@@ -106,12 +106,18 @@
 
     <section class="education" id="education">
       <h2>Education</h2>
-      <p>Lomonosov Moscow State University, Physics (2008)</p>
+      <ul>
+        <li>Lomonosov Moscow State University, Physics (2008)</li>
+        <li>RS School, JS / Front-end (2022)</li>
+      </ul>
     </section>
 
     <section class="languages" id="languages">
       <h2>Languages</h2>
-      <p>English (Intermediate, B1)</p>
+      <ul>
+        <li>English (Intermediate, B1)</li>
+        <li>Russian (Native)</li>
+      </ul>
     </section>
   </main>
 
