feat: add footer content with icons

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <header>
     <div class="left-column"></div>
     <div class="center-column">
-      <img src="/images/avatar.jpg" alt="Avatar" width="300" height="300">
+      <img src="./images/avatar.jpg" alt="Avatar" width="300" height="300">
       <h1>Dmitrii<br>Brazhnikov</h1>
       <h2>Frontend Developer</h2>
     </div>
@@ -59,7 +59,7 @@
             <li>reports in MS Office format (ZWWW, XLSX Workbench);</li>
             <li>pdf-forms (Adobe LiveCycle Designer);</li>
             <li>integration with external systems by SAP PI/XI, SAP .NET Connector, using Single Sign-On (SSO);</li>
-            <li>experience in development for modules RE-FX, HR, RCM;</li>
+            <li>experience in development for modules RE-FX, HR, RCM.</li>
           </ul>
         </li>
         <li>basic knowledge of other languages:
@@ -99,8 +99,8 @@
     <section class="projects" id="projects">
       <h2>Projects</h2>
       <ul>
-        <li><a href="https://brazhik.github.io/rsschool-cv/cv">CV#1. Markdown & Git</a> (June 2022)</li>
-        <li><a href="https://brazhik.github.io/rsschool-cv">CV#3. CV. Cross-Check</a> (June 2022)</li>
+        <li><a href="https://brazhik.github.io/rsschool-cv/cv" target="_blank">CV#1. Markdown & Git</a> (June 2022)</li>
+        <li><a href="https://brazhik.github.io/rsschool-cv" target="_blank">CV#3. CV. Cross-Check</a> (June 2022)</li>
       </ul>
     </section>
 
@@ -121,7 +121,16 @@
     </section>
   </main>
 
-  <footer></footer>
+  <footer>
+    <a class="github" href="https://github.com/brazhik" target="_blank">
+      <img class="github-logo" src="./icons/github_logo.png" alt="GitHub Logo" width="32" height="32">
+      <p>My GitHub</p>
+    </a>
+    <p>2022</p>
+    <a class="rsschool" href="https://rs.school/js/" target="_blank">
+      <img src="icons/rs_school_js.svg" width="86" height="32" alt="RS School">
+    </a>
+  </footer>
 </body>
 
 </html>
