fix: rewrite about me

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
   <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
   <title>CV</title>
 </head>
@@ -11,7 +12,7 @@
   <header>
     <div class="left-column"></div>
     <div class="center-column">
-      <img src="./images/avatar.jpg" alt="Avatar" width="300" height="300">
+      <img src="./images/avatar.jpg" width="300" height="300" alt="Avatar">
       <h1>Dmitrii<br>Brazhnikov</h1>
       <h2>Frontend Developer</h2>
     </div>
@@ -45,13 +46,15 @@
       <ul>
         <li><b>Goles:</b> in-depth study of frontend development (JS, React);</li>
         <li><b>Current specialization:</b> ABAP-developer for SAP products;</li>
-        <li><b>Strengths:</b> attentiveness, the ability to complete tasks, the ability to search for information.</li>
+        <li><b>Strengths:</b> self-motivated, honesty, versatility, organization, results driven, teamwork.</li>
       </ul>
     </section>
 
     <section class="skills" id="skills">
       <h2>Skills</h2>
       <ul>
+        <li>HTML</li>
+        <li>CSS</li>
         <li>JavaScript</li>
         <li>ABAP language (ALV-Grid, ALV-Tree, transactions, reports, UI, code optimization, etc.):
           <ul>
@@ -123,7 +126,7 @@
 
   <footer>
     <a class="github" href="https://github.com/brazhik" target="_blank">
-      <img class="github-logo" src="./icons/github_logo.png" alt="GitHub Logo" width="32" height="32">
+      <img class="github-logo" src="./icons/github_logo.png" width="32" height="32" alt="GitHub Logo">
       <p>My GitHub</p>
     </a>
     <p>2022</p>
