fix: escape symbols

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
     <section class="projects" id="projects">
       <h2>Projects</h2>
       <ul>
-        <li><a href="https://brazhik.github.io/rsschool-cv/cv" target="_blank">CV#1. Markdown & Git</a> (June 2022)</li>
+        <li><a href="https://brazhik.github.io/rsschool-cv/cv" target="_blank">CV#1. Markdown &amp; Git</a> (June 2022)</li>
         <li><a href="https://brazhik.github.io/rsschool-cv" target="_blank">CV#3. CV. Cross-Check</a> (June 2022)</li>
       </ul>
     </section>
